# framework-of-thoughts

./: .gitignore  .pre-commit-config.yaml  README.md  nx.html  pyproject.toml
examples/: openai_pricing.py  test.py
examples/doc_merge/: README.md  dataloader.py  dspy_study.py  got_dataset_evaluation.py  optimization_study.py
examples/doc_merge/output/: dataset_measurement.xlsx
examples/doc_merge/programs/: got.py  prompter_parser.py
examples/game_of_24/: README.md  dataloader.py  dataset_evaluation.py  optimization_study.py
examples/game_of_24/programs/: prompter_parser.py  tot.py  types.py
examples/hotpotqa/: README.md  dataset_evaluation.py  dspy_study.py  visualize.py
examples/hotpotqa/programs/: dataloader.py  dynamic_probtree.py  dynamic_probtree_onlowscore.py  dynamic_probtree_study.py  probtree.py  probtree_study.py  prompter_parser.py  study.py  utils.py
examples/hotpotqa/services/: download_dataset.py  index_hotpotqa.py
examples/sorting/: README.md  dataloader.py  dataset_evaluation.py  main.py  optimization_study.py  sorting.py  tot_dataset_evaluation.py
examples/sorting/programs/: cot.py  got.py  io.py  prompter_parser.py  tot.py
examples/test/: dataloader.py  generate_math_dataset.py  test_controller.py  test_dataset_evaluator.py  test_optimizer.py  tutorial.ipynb  tutorial_snapshot.html
examples/test/dataset/: test_dataset.txt
examples/test/output/: test_dataset_measurement.xlsx  test_optimizer_best_run.xlsx  test_optimizer_cache.pkl  test_optimizer_study_measurement.xlsx
llm_graph_optimizer/: types.py
llm_graph_optimizer/controller/: controller.py
llm_graph_optimizer/graph_of_operations/: base_graph.py  graph_of_operations.py  graph_partitions.py  snapshot_graph.py  types.py
llm_graph_optimizer/language_models/: abstract_language_model.py  openai_chat.py  openai_chat_with_logprobs.py
llm_graph_optimizer/language_models/cache/: cache.py  types.py
llm_graph_optimizer/language_models/helpers/: language_model_config.py  last_request_timer.py  openai_rate_limiter.py  query_metadata.py
llm_graph_optimizer/measurement/: dataset_measurement.py  measurement.py  process_measurement.py  study_measurement.py
llm_graph_optimizer/operations/: abstract_operation.py  end.py  filter_operation.py  llm_operation.py  pack_unpack_operations.py  score_operation.py  start.py  test_operation.py
llm_graph_optimizer/operations/base_operations/: branch_operation.py  end.py  filter_operation.py  filter_operation_with_edge_move.py  pack_unpack_operations.py  score_operation.py  start.py  test_operation.py
llm_graph_optimizer/optimizer/: dataset_evaluator.py  study.py  study_dspy.py  study_dspy_old.py  study_optuna.py
llm_graph_optimizer/schedulers/: schedulers.py
(+131 files in other folders)
