[tool.poetry]
name = "llm_graph_optimizer"
version = "0.1.0"
description = ""
authors = ["Felix Fricke <f.fricke@tum.de>"]
readme = "README.md"
packages = [{ include = "llm_graph_optimizer" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = ">=1.70.0,<2.0.0"
backoff = ">=2.2.1,<3.0.0"
networkx = ">=3.4.2,<4.0.0"
matplotlib = ">=3.10.1,<4.0.0"
pyvis = ">=0.3.2,<0.4.0"
typeguard = ">=4.4.2,<5.0.0"
pandas = ">=2.2.3,<3.0.0"
bm25s = ">=0.2.11,<0.3.0"
jupyterlab = ">=4.4.0,<5.0.0"

[tool.poetry.extras]
examples = ["bm25s"]
dev = ["jupyterlab"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E731"]