[tool.poetry]
name = "llm_graph_optimizer"
version = "0.1.0"
description = ""
authors = ["Felix Fricke <f.fricke@tum.de>"]
readme = "README.md"
packages = [{ include = "llm_graph_optimizer" }]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.70.0"
backoff = "^2.2.1"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
pyvis = "^0.3.2"
typeguard = "^4.4.2"
pandas = "^2.2.3"
bm25s = "^0.2.11"
ruff = "^0.11.6"
pre-commit = "^4.2.0"
optuna = "^4.3.0"
optuna-dashboard = "^0.18.0"
numpy = "^2.2.5"
jupyter = "^1.1.1"
xlsxwriter = "^3.2.3"

[tool.poetry.extras]
examples = ["jupyter", "bm25s"]
dataset = ["numpy", "xlsxwriter"]
optimizer = ["numpy", "xlsxwriter", "optuna", "optuna-dashboard"]
dev = ["ruff", "pre-commit"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["E731"]

[tool.pre-commit]
config = ".pre-commit-config.yaml"