[tool.poetry]
name = "llm_graph_optimizer"
version = "0.2.0"
description = ""
authors = ["Anonymous"]
readme = "README.md"
packages = [{ include = "llm_graph_optimizer" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openai = "^1.70.0"
backoff = "^2.2.1"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
pyvis = "^0.3.2"
typeguard = "^4.4.2"
pandas = "^2.2.3"
bm25s = "^0.2.11"
ruff = "^0.11.6"
pre-commit = "^4.2.0"
optuna = "^4.3.0"
optuna-dashboard = "^0.18.0"
numpy = "^2.2.5"
jupyter = "^1.1.1"
xlsxwriter = "^3.2.3"
nest-asyncio = "^1.6.0"
dotenv = "^0.9.9"
tiktoken = "^0.9.0"
dspy = "^3"
numexpr = "^2.12.1"

[tool.poetry.extras]
examples = ["jupyter", "bm25s"]
dataset = ["numpy", "xlsxwriter"]
optimizer = ["numpy", "xlsxwriter", "optuna", "optuna-dashboard", "dspy"]
dev = ["ruff", "pre-commit"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["E731"]

[tool.pre-commit]
config = ".pre-commit-config.yaml"